sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:10: error: ')' expected but ']' found.
		if (!echange((j,j+1)])
                                    ^AlgBubbleSort3:14: error: illegal start of simple expression
}
^